tests/ui/parse/extern_fn_with_body.rx
//@ spec: RXS-0019
extern "C" {
    fn bad() {} //~ ERROR RX0008
}
